--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,14 @@
-version: '3.9'
+version: '3.3'
 services:
   backend:
     build: ./fire-image-backend/
     ports:
       - "8000:80"
   frontend:
-    build: ./fire-image-frontend/
+    build: 
+      context: ./fire-image-frontend/
+      args:
+        - NEXT_PUBLIC_BACKEND_SERVICE_IP=${NEXT_PUBLIC_BACKEND_SERVICE_IP}
     ports:
       - "8080:3000"
     
