--- a/fire-image-frontend/Dockerfile
+++ b/fire-image-frontend/Dockerfile
@@ -8,6 +8,10 @@ RUN npm install
 
 COPY . .
 
+ARG NEXT_PUBLIC_BACKEND_SERVICE_IP
+
+ENV NEXT_PUBLIC_BACKEND_SERVICE_IP=$NEXT_PUBLIC_BACKEND_SERVICE_IP
+
 RUN npm run build
 
 ENV NODE_ENV production
